--- a/main.css
+++ b/main.css
@@ -1089,6 +1089,16 @@ h5 {
   display: block;
 }
 
+.socialicons{
+
+  margin: auto;
+  padding-bottom: 48px;
+}
+
+.socialicons img{
+  width: 40%;
+}
+
 /*                                                                        Mobile Slut                                              */
 
 /*                                                                        DESKTOP START                                              */
@@ -1896,6 +1906,23 @@ h5 {
     margin: 0;
   }
 
+  .socialicons{
+    grid-row: 1/2;
+    grid-column: 5/6;
+    text-align: center;
+    padding-bottom: 0;
+  }
+  .socialicons img{
+    width: 48px;
+  }
+
+  .fødevarestyrelsen{
+    width: auto;
+    grid-row: 1/2;
+    grid-column: 5/6;
+    text-align: center;
+    padding-top: 24px;
+  }
 }
 
 /*                                                                        DESKTOP Slut                                              */
