--- a/main.css
+++ b/main.css
@@ -18,7 +18,8 @@ body .logo {
   font-weight: 900;
   font-family: 'Open Sans';
   text-transform: uppercase;
-  height: 4.2vh;
+  width: 150px;
+  margin-top: -18px;
 }
 .cookietitle{
   width: 70vw;
@@ -1922,6 +1923,18 @@ h5 {
     grid-column: 5/6;
     text-align: center;
     padding-top: 24px;
+  }
+  body .logo {
+    position: fixed;
+    top: 30px;
+    left: 34px;
+    z-index: 6;
+    font-size: 20px;
+    font-weight: 900;
+    font-family: 'Open Sans';
+    text-transform: uppercase;
+    width: 200px;
+    margin-top: -18px;
   }
 }
 
