--- a/main.css
+++ b/main.css
@@ -181,7 +181,7 @@ body #navtoggle:checked~.navbg>.ulist>.listitem {
 
 .frontimgcontainer {
   width: 100vw;
-  height: 600px;
+  height: 650px;
   position: absolute;
   top: 0;
   margin: 0;
@@ -206,108 +206,17 @@ body #navtoggle:checked~.navbg>.ulist>.listitem {
   text-align: center;
 }
 
-/* Skal slettes
-.pure-material-button-contained {
-  position: relative;
-  display: inline-block;
-  box-sizing: border-box;
-  border: none;
-  border-radius: 4px;
-  width: 85%;
-  height: 108px;
-  text-transform: uppercase;
-  color: white;
-  background-image: url("img/foodphotograph.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-  font-family: 'Open Sans';
-  font-size: 36px;
-  font-weight: 500;
-  line-height: 108px;
-  overflow: hidden;
-  outline: none;
-  transition: box-shadow 0.2s;
-  text-decoration: none;
-  margin: 12px 0px;
-}
-*/
 .nav {
   display: none;
 }
 
-/* Overlay */
-.pure-material-button-contained::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  opacity: 0;
-  transition: opacity 0.2s;
-}
 
-/* Ripple */
-.pure-material-button-contained::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  border-radius: 50%;
-  padding: 50%;
-  width: 32px;
-  /* Safari */
-  height: 32px;
-  /* Safari */
-  opacity: 0;
-  transform: translate(-50%, -50%) scale(1);
-  transition: opacity 1s, transform 0.5s;
-}
 
-/* Hover, Focus */
-.pure-material-button-contained:hover,
-.pure-material-button-contained:focus {
-  box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.2), 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12);
-}
 
-.pure-material-button-contained:hover::before {
-  opacity: 0.08;
-}
 
-.pure-material-button-contained:focus::before {
-  opacity: 0.24;
-}
 
-.pure-material-button-contained:hover:focus::before {
-  opacity: 0.3;
-}
 
-/* Active */
-.pure-material-button-contained:active {
-  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-}
 
-.pure-material-button-contained:active::after {
-  opacity: 0.32;
-  transform: translate(-50%, -50%) scale(0);
-  transition: transform 0s;
-}
-
-/* Disabled */
-.pure-material-button-contained:disabled {
-  box-shadow: none;
-  cursor: initial;
-}
-
-.pure-material-button-contained:disabled::before {
-  opacity: 0;
-}
-
-.pure-material-button-contained:disabled::after {
-  opacity: 0;
-}
 
 /* Flaoter Book bord */
 .lftbtn {
@@ -494,6 +403,14 @@ footer {
   padding-bottom: 75px;
 }
 
+.getFullYear {
+  font-family: 'Open Sans';
+  font-weight: lighter;
+  font-size: 8pt;
+  margin: 0;
+  padding-bottom: 75px;
+}
+
 .tel {
   text-decoration: none;
   color: black;
@@ -516,11 +433,16 @@ footer {
 
 .slideshow {
   width: 100vw;
+  margin-bottom: 48px;
 }
 
 .swiper-container {
   width: 100% !important;
-  height: 300px;
+  height: 350px;
+}
+
+.swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
+  top: 280px  !important;
 }
 
 .swiper-slide {
@@ -647,7 +569,9 @@ p {
   text-align: center;
 }
 
-.embedmaps {}
+.embedmaps {
+  height: 400px;
+}
 
 /*kontakt end */
 /*menu start*/
@@ -672,6 +596,7 @@ h5 {
 .sectiontitle {
   font-size: 14pt;
   margin-top: 84px;
+  text-decoration: underline;
   text-transform:  uppercase;
 }
 .liststyling {
@@ -750,6 +675,11 @@ h5 {
 .drk8 {
   grid-area: drk8;
 }
+
+
+
+
+
 
 .dish {
   padding-top: 0px;
@@ -1024,6 +954,30 @@ h5 {
 /*OM OS slutter her*/
 /*booking starter her*/
 
+.forbestillingsektion{
+    display: flex;
+    background-color: rgba(232, 161, 16, 0.5);
+    font-family: 'Open Sans';
+    text-align: center;
+    border-radius: 4px;
+    padding-top: 12px;
+    height: 400px;
+  }
+
+  .remove{
+    margin-top: 0;
+  }
+
+  .aboutus br:nth-child(1){
+    display: none;
+  }
+
+  .arrangementerinside{
+    align-self: center;
+    margin: auto;
+    padding-bottom: 12px;
+  }
+
 /* Email */
 .emcontact {
   text-decoration: none;
@@ -1098,6 +1052,33 @@ h5 {
 
 .socialicons img{
   width: 40%;
+}
+
+.conferencetekst {
+  margin-left: auto;
+  margin-right: auto;
+  text-decoration: none;
+  font-family: 'Open Sans';
+  text-align: center;
+  background-color: rgba(232, 161, 16, 0.5);
+  width: 80%;
+  border-radius: 4px;
+  display: flex;
+}
+section .aboutuscat {
+  width: 80%;
+  font-weight: lighter;
+  padding: 24px;
+  grid-column: 1/2;
+  margin: auto;
+}
+
+textarea::placeholder{
+  font-family: sans-serif;
+}
+.the2 {
+  grid-area: the2;
+  margin-bottom: 84px;
 }
 
 /*                                                                        Mobile Slut                                              */
@@ -1218,6 +1199,7 @@ h5 {
     grid-column: 3/5;
     justify-self: center;
     align-self: center;
+    margin-bottom: 48px;
   }
 
   .slideshow div {
@@ -1261,10 +1243,11 @@ h5 {
 
   .slideshowimages {
     width: 100%;
+    padding-bottom: 18px;
   }
 /* Prikker under galleri */
   .swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
-    top: 350px !important;
+    top: 385px !important;
   }
 
   .sitemap {
@@ -1343,6 +1326,10 @@ h5 {
     padding-bottom: 20px;
   }
 
+  .embedmaps {
+    height: 600px;
+  }
+
   /*kontakt desktop slutter her*/
   /*om desktop starter herunder */
   section .aboutus {
@@ -1382,6 +1369,7 @@ h5 {
     border-radius: 4px;
     text-align: center;
     border-radius: 4px;
+    height: 95%;
   }
 
   .framesecond {
@@ -1419,6 +1407,16 @@ h5 {
     grid-column: 2/3;
   }
 
+  section .aboutuscat {
+    width: 80%;
+    font-weight: lighter;
+    padding: 24px;
+    grid-column: 1/2;
+    margin: auto;
+
+  }
+
+
   .udfyld {
     width: 80%;
     margin: auto;
@@ -1435,6 +1433,7 @@ h5 {
     background-color: rgba(232, 161, 16, 0.5);
     width: 80%;
     border-radius: 4px;
+    display: flex;
   }
 
   .emcontact {
@@ -1443,6 +1442,9 @@ h5 {
   }
 
   .sub-btn {
+    border: none;
+    border-radius: 4px;
+    padding: 12px;
     background-color: #E8A110;
     color: white;
     font-weight: bold;
@@ -1468,7 +1470,7 @@ h5 {
   }
 
   .sectiontitle {
-    font-size: 24pt;
+    font-size: 17pt;
     margin-top: 0px;
   }
 
@@ -1634,6 +1636,7 @@ h5 {
   }
 
   .hjktitle {
+
     grid-area: hjktitle;
   }
 
@@ -1880,6 +1883,7 @@ h5 {
 
   .the2 {
     grid-area: the2;
+    margin-bottom: 84px;
   }
 
   /*menu desktop slutter her */
@@ -1891,12 +1895,19 @@ h5 {
     padding-top: 0;
   }
 
-  .arrangementerinside {
+.forbestillingsektion{
+    display: flex;
     background-color: rgba(232, 161, 16, 0.5);
-    margin-left: 24px;
-    margin-right: 24px;
+    font-family: 'Open Sans';
+    text-align: center;
     border-radius: 4px;
     padding-top: 12px;
+    height: 100%;
+  }
+
+  .arrangementerinside {
+    margin: auto;
+    width: 100%;
   }
 
   .arrangementerinside h3 {
@@ -1905,6 +1916,11 @@ h5 {
 
   .theforkplugin h3 {
     margin: 0;
+  }
+
+  .theforkplugin{
+    width: 80%;
+    margin: auto;
   }
 
   .socialicons{
